AC_INIT(Makefile.in)

# Restore CFLAGS to the initial value
if test "x$REALCFLAGS" = "x" ; then
  :
else
  CFLAGS="$REALCFLAGS"
  export CFLAGS
fi

AC_SUBST(WARN)
AC_SUBST(OPTIMIZE)

AC_SET_MAKE

AC_ARG_WITH(pike,   [  --with-pike          Specify version of Pike],[],[with_pike=0.5])

AC_MSG_CHECKING(version of Pike to use)
case "$with_pike" in
  0.5)
  ;;
  0.6)
  ;;
  *)
    with_pike=0.5
  ;;
esac
AC_MSG_RESULT($with_pike)

test -d $with_pike/. || mkdir $with_pike

AC_CONFIG_SUBDIRS($with_pike/src)

AC_OUTPUT(Makefile)
