AC_INIT(Makefile.in)

# Restore CFLAGS to the initial value
if test "x$REALCFLAGS" = "x" ; then
  :
else
  CFLAGS="$REALCFLAGS"
  export CFLAGS
fi

AC_SUBST(WARN)
AC_SUBST(OPTIMIZE)

AC_SET_MAKE

AC_ARG_WITH(pike,   [  --with-pike          Specify version of Pike],[],[with_pike=0.5])

AC_MSG_CHECKING(version of Pike to use)
case "$with_pike" in
  0.5)
  ;;
  0.6)
  ;;
  dual|multi)
    with_pike=dual
  ;;
  *)
    with_pike=0.5
  ;;
esac
AC_MSG_RESULT($with_pike)

if test "x$with_pike" = "xdual"; then
  for d in `cd $srcdir; echo [0-9]*`; do
    test -d $d/. || mkdir $d
  done
  pike_subdirs=`cd $srcdir; echo [0-9]*/src`
else
  test -d $with_pike/. || mkdir $with_pike
  pike_subdirs=$with_pike/src
fi

AC_CONFIG_SUBDIRS($pike_subdirs)

AC_OUTPUT(Makefile)
