AC_REVISION("$Id: configure.in,v 1.3 1999/08/27 12:04:09 grubba Exp $")

AC_INIT(Makefile.in)

AC_CONFIG_HEADER(config.h)

AC_PROG_CC

AC_CHECK_HEADERS(unistd.h)

AC_CHECK_FUNCS(crypt)

if test $ac_cv_func_crypt = no ; then
  AC_CHECK_LIB(crypt,crypt,[LIBS="${LIBS} -lcrypt" ; AC_DEFINE(HAVE_CRYPT)])
fi

AC_OUTPUT(Makefile)
